--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "grunt-jsbeautifier": ""
   },
   "dependencies": {
-    "utils": "nathanfaucett/utils",
+    "type": "nathanfaucett/type",
     "http_error": "nathanfaucett/http_error",
     "mime": "nathanfaucett/mime"
   }
