--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file_path": "git://github.com/nathanfaucett/file_path",
     "http_error": "nathanfaucett/http_error",
     "mime": "nathanfaucett/mime",
+    "qs": "git://github.com/nathanfaucett/qs",
     "type": "nathanfaucett/type"
   }
 }
