--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "file_path": "git://github.com/nathanfaucett/file_path",
     "http_error": "nathanfaucett/http_error",
+    "config": "nathanfaucett/config",
     "mime": "nathanfaucett/mime",
     "qs": "git://github.com/nathanfaucett/qs",
     "type": "nathanfaucett/type"
