--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "http_error": "nathanfaucett/http_error",
     "mime": "nathanfaucett/mime",
     "qs": "git://github.com/nathanfaucett/qs",
-    "type": "nathanfaucett/type"
+    "is_object": "nathanfaucett/is_object",
+    "is_array": "nathanfaucett/is_array",
+    "is_string": "nathanfaucett/is_string"
   }
 }
